--- a/frame/evm/precompile/simple/Cargo.toml
+++ b/frame/evm/precompile/simple/Cargo.toml
@@ -11,7 +11,7 @@ description = "Simple precompiles for EVM pallet."
 [dependencies]
 ripemd = { version = "0.1", default-features = false }
 
-sp-io = { version = "6.0.0", git = "https://github.com/CESSProject/substrate", branch = "monthly-2022-04-cess", default-features = false }
+sp-io = { version = "6.0.0", git = "https://github.com/kumandra/substrate", branch = "monthly-2022-10-kumandra", default-features = false }
 
 fp-evm = { version = "3.0.0-dev", path = "../../../../primitives/evm", default-features = false }
 
