--- a/primitives/consensus/Cargo.toml
+++ b/primitives/consensus/Cargo.toml
@@ -12,9 +12,9 @@ repository = "https://github.com/paritytech/frontier/"
 ethereum = { version = "0.12.0", default-features = false, features = ["with-codec"] }
 
 codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
-sp-core = { version = "6.0.0", git = "https://github.com/CESSProject/substrate", branch = "monthly-2022-04-cess", default-features = false }
-sp-runtime = { version = "6.0.0", git = "https://github.com/CESSProject/substrate", branch = "monthly-2022-04-cess", default-features = false }
-sp-std = { version = "4.0.0", git = "https://github.com/CESSProject/substrate", branch = "monthly-2022-04-cess", default-features = false }
+sp-core = { version = "6.0.0", git = "https://github.com/kumandra/substrate", branch = "monthly-2022-10-kumandra", default-features = false }
+sp-runtime = { version = "6.0.0", git = "https://github.com/kumandra/substrate", branch = "monthly-2022-10-kumandra", default-features = false }
+sp-std = { version = "4.0.0", git = "https://github.com/kumandra/substrate", branch = "monthly-2022-10-kumandra", default-features = false }
 
 [features]
 default = ["std"]
