--- a/primitives/evm/Cargo.toml
+++ b/primitives/evm/Cargo.toml
@@ -17,8 +17,8 @@ evm = { version = "0.35.0", default-features = false, features = ["with-codec"] 
 serde = { version = "1.0.101", features = ["derive"], optional = true }
 
 codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
-sp-core = { version = "6.0.0", git = "https://github.com/CESSProject/substrate", branch = "monthly-2022-04-cess", default-features = false }
-sp-std = { version = "4.0.0", git = "https://github.com/CESSProject/substrate", branch = "monthly-2022-04-cess", default-features = false }
+sp-core = { version = "6.0.0", git = "https://github.com/kumandra/substrate", branch = "monthly-2022-10-kumandra", default-features = false }
+sp-std = { version = "4.0.0", git = "https://github.com/kumandra/substrate", branch = "monthly-2022-10-kumandra", default-features = false }
 
 [features]
 default = ["std"]
